Subir cambios y preparar versión 1

--- a/sitio/index.html
+++ b/sitio/index.html
@@ -318,7 +318,7 @@
       <div class="user-profile">
         <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="User profile">
         <div class="user-info">
-          <p class="user-name">Carlos Barber</p>
+          <p class="user-name">Sebastian Navarro</p>
           <span class="user-role">Administrador</span>
         </div>
       </div>
@@ -335,7 +335,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link">
+          <a href="clientes.html" class="nav-link">
             <i class="bi bi-people"></i> Clientes
           </a>
         </li>
