--- a/sitio/pagina2.html
+++ b/sitio/pagina2.html
@@ -40,7 +40,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">
+                    <a href="clientes.html" class="nav-link">
                         <i class="bi bi-people"></i> Clientes
                     </a>
                 </li>
