--- a/sitio/vistaCliente.html
+++ b/sitio/vistaCliente.html
@@ -1,125 +1,132 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BarberShop Pro - Mi Cuenta</title>
-    <!-- Bootstrap 5 CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Bootstrap Icons -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
-    <!-- Custom CSS -->
-    <link href="styleCliente.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>BarberShop Pro - Mi Cuenta</title>
+  <!-- Bootstrap 5 CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Bootstrap Icons -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
+  <!-- Custom CSS -->
+  <link href="styleVistaCliente.css" rel="stylesheet">
 </head>
 <body>
-    <div class="container mt-4">
-        <!-- Perfil del Cliente -->
-        <div class="card p-3 mb-4">
-            <div class="d-flex align-items-center">
-                <img src="https://randomuser.me/api/portraits/men/45.jpg" alt="Cliente" width="60" height="60" class="rounded-circle me-3">
-                <div>
-                    <h4 class="mb-0">Hola, Juan Pérez</h4>
-                    <small class="text-muted">Última visita: 14 Junio 2025</small>
-                </div>
-            </div>
+  <div class="container mt-4">
+    <!-- Perfil del Cliente -->
+    <div class="card p-3 mb-4">
+      <div class="d-flex align-items-center">
+        <img src="https://randomuser.me/api/portraits/men/45.jpg" alt="Cliente" width="60" height="60" class="rounded-circle me-3">
+        <div>
+          <h4 class="mb-0">Hola, Juan Pérez</h4>
+          <small class="text-muted">Última visita: 14 Junio 2025</small>
         </div>
-
-        <!-- Próxima Cita -->
-        <div class="card p-3 mb-4">
-            <h5 class="mb-3">Tu próxima cita</h5>
-            <div class="d-flex justify-content-between align-items-center">
-                <div>
-                    <p class="mb-1"><strong>Servicio:</strong> Corte + Barba</p>
-                    <p class="mb-1"><strong>Barbero:</strong> Carlos Mendoza</p>
-                    <p class="mb-1"><strong>Fecha:</strong> 16 Junio 2025, 09:00 AM</p>
-                </div>
-                <div>
-                    <button class="btn btn-outline-secondary">Reprogramar</button>
-                    <button class="btn btn-outline-danger">Cancelar</button>
-                </div>
-            </div>
-        </div>
-
-        <!-- Historial de Citas -->
-        <div class="card p-3 mb-4">
-            <h5 class="mb-3">Historial de citas</h5>
-            <table class="table table-striped">
-                <thead>
-                    <tr>
-                        <th>Fecha</th>
-                        <th>Servicio</th>
-                        <th>Barbero</th>
-                        <th>Estado</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>14 Junio 2025</td>
-                        <td>Corte clásico</td>
-                        <td>Luisa Fernández</td>
-                        <td><span class="badge bg-success">Completada</span></td>
-                    </tr>
-                    <tr>
-                        <td>30 Mayo 2025</td>
-                        <td>Barba completa</td>
-                        <td>Pedro Rojas</td>
-                        <td><span class="badge bg-success">Completada</span></td>
-                    </tr>
-                    <tr>
-                        <td>15 Abril 2025</td>
-                        <td>Corte + Tinte</td>
-                        <td>Carlos Mendoza</td>
-                        <td><span class="badge bg-danger">Cancelada</span></td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-
-        <!-- Nueva Cita -->
-        <div class="card p-3">
-            <h5 class="mb-3">Agenda una nueva cita</h5>
-            <form>
-                <div class="mb-3">
-                    <label for="serviceSelect" class="form-label">Servicio</label>
-                    <select class="form-select" id="serviceSelect">
-                        <option selected>Seleccionar servicio...</option>
-                        <option value="1">Corte clásico - $25</option>
-                        <option value="2">Corte + Barba - $40</option>
-                        <option value="3">Tinte de cabello - $50</option>
-                    </select>
-                </div>
-                <div class="mb-3">
-                    <label for="barberSelect" class="form-label">Barbero</label>
-                    <select class="form-select" id="barberSelect">
-                        <option selected>Seleccionar barbero...</option>
-                        <option value="1">Carlos Mendoza</option>
-                        <option value="2">Luisa Fernández</option>
-                        <option value="3">Pedro Rojas</option>
-                    </select>
-                </div>
-                <div class="mb-3">
-                    <label for="appointmentDate" class="form-label">Fecha</label>
-                    <input type="date" class="form-control" id="appointmentDate">
-                </div>
-                <div class="mb-3">
-                    <label for="appointmentTime" class="form-label">Hora</label>
-                    <select class="form-select" id="appointmentTime">
-                        <option selected>Seleccionar hora...</option>
-                        <option>09:00 AM</option>
-                        <option>10:00 AM</option>
-                        <option>11:00 AM</option>
-                        <option>12:00 PM</option>
-                        <option>02:00 PM</option>
-                        <option>03:00 PM</option>
-                        <option>04:00 PM</option>
-                    </select>
-                </div>
-                <button type="submit" class="btn btn-primary w-100">Reservar Cita</button>
-            </form>
-        </div>
+      </div>
     </div>
 
-    <!-- Bootstrap 5 JS Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Botón para ir a Perfil -->
+    <div class="d-flex justify-content-end mb-4">
+      <a href="perfil.html" class="btn btn-outline-secondary">
+        <i class="bi bi-person"></i> Ir a Perfil
+      </a>
+    </div>
+
+    <!-- Próxima Cita -->
+    <div class="card p-3 mb-4">
+      <h5 class="mb-3">Tu próxima cita</h5>
+      <div class="d-flex justify-content-between align-items-center">
+        <div>
+          <p class="mb-1"><strong>Servicio:</strong> Corte + Barba</p>
+          <p class="mb-1"><strong>Barbero:</strong> Carlos Mendoza</p>
+          <p class="mb-1"><strong>Fecha:</strong> 16 Junio 2025, 09:00 AM</p>
+        </div>
+        <div>
+          <button class="btn btn-outline-secondary">Reprogramar</button>
+          <button class="btn btn-outline-danger">Cancelar</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- Historial de Citas -->
+    <div class="card p-3 mb-4">
+      <h5 class="mb-3">Historial de citas</h5>
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th>Fecha</th>
+            <th>Servicio</th>
+            <th>Barbero</th>
+            <th>Estado</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>14 Junio 2025</td>
+            <td>Corte clásico</td>
+            <td>Luisa Fernández</td>
+            <td><span class="badge bg-success">Completada</span></td>
+          </tr>
+          <tr>
+            <td>30 Mayo 2025</td>
+            <td>Barba completa</td>
+            <td>Pedro Rojas</td>
+            <td><span class="badge bg-success">Completada</span></td>
+          </tr>
+          <tr>
+            <td>15 Abril 2025</td>
+            <td>Corte + Tinte</td>
+            <td>Carlos Mendoza</td>
+            <td><span class="badge bg-danger">Cancelada</span></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+
+    <!-- Nueva Cita -->
+    <div class="card p-3">
+      <h5 class="mb-3">Agenda una nueva cita</h5>
+      <form>
+        <div class="mb-3">
+          <label for="serviceSelect" class="form-label">Servicio</label>
+          <select class="form-select" id="serviceSelect">
+            <option selected>Seleccionar servicio...</option>
+            <option value="1">Corte clásico - $25</option>
+            <option value="2">Corte + Barba - $40</option>
+            <option value="3">Tinte de cabello - $50</option>
+          </select>
+        </div>
+        <div class="mb-3">
+          <label for="barberSelect" class="form-label">Barbero</label>
+          <select class="form-select" id="barberSelect">
+            <option selected>Seleccionar barbero...</option>
+            <option value="1">Carlos Mendoza</option>
+            <option value="2">Luisa Fernández</option>
+            <option value="3">Pedro Rojas</option>
+          </select>
+        </div>
+        <div class="mb-3">
+          <label for="appointmentDate" class="form-label">Fecha</label>
+          <input type="date" class="form-control" id="appointmentDate">
+        </div>
+        <div class="mb-3">
+          <label for="appointmentTime" class="form-label">Hora</label>
+          <select class="form-select" id="appointmentTime">
+            <option selected>Seleccionar hora...</option>
+            <option>09:00 AM</option>
+            <option>10:00 AM</option>
+            <option>11:00 AM</option>
+            <option>12:00 PM</option>
+            <option>02:00 PM</option>
+            <option>03:00 PM</option>
+            <option>04:00 PM</option>
+          </select>
+        </div>
+        <button type="submit" class="btn btn-primary w-100">Reservar Cita</button>
+      </form>
+    </div>
+  </div>
+
+  <!-- Bootstrap 5 JS Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
